Task-43145: Fix multiple bugs on mobile view (#521)
* Task-43145:Multiple bugs on mobile view

--- a/task-management/src/main/webapp/skin/css/tasks.less
+++ b/task-management/src/main/webapp/skin/css/tasks.less
@@ -881,7 +881,6 @@
                   padding: 8px!important;
                   .taskItemDescription {
                     min-height: 70px;
-                    margin-bottom: 10px;
                     display: -webkit-box;
                     -webkit-line-clamp: 4;
                     -webkit-box-orient: vertical;
@@ -899,7 +898,6 @@
                     }
                   }
                   .largeDescriptionArea {
-                    min-height: 120px!important;
                     margin-bottom: 0!important;
                   }
                   .ProjectSpace {
@@ -2142,7 +2140,7 @@
             }
           }
           .taskLabelsAssigneeComment {
-            max-width: 58%;
+            max-width: 50%;
 
             .v-chip {
               cursor: pointer;
@@ -3168,14 +3166,11 @@
     .taskDrawer .drawerHeader .drawerTitle #taskActionMenu .uiThreeDotsIcon:before {
       font-size: 22px!important;
     }
-    .drawerTitle .drawerTitleAndProject .taskProjectName .projectName {
-      max-width: 130px!important;
+    .drawerTitle .taskProjectName .projectName {
+      max-width: 61%!important;
     }
     .icon-ArrowRight:before {
       font-size: 14px!important;
-    }
-    .taskProjectName .inputTaskProjectName .v-input__control > .v-input__slot .v-select__slot .v-select__selections {
-      max-width: 60%!important;
     }
     .mdi-close {
       font-size: 22px!important;
@@ -3183,7 +3178,7 @@
       height: 23px!important;
     }
     .drawerTitleAndProject {
-      max-width: 240px!important;
+      max-width: 90%!important;
     }
     .taskAssignItem {
       .assigneeName {
@@ -3232,6 +3227,9 @@
                     .taskItemDescription {
                       min-height: inherit;
                     }
+                    .largeDescriptionAreaSpace{
+                      -webkit-line-clamp: 2;
+                    }
                   }
                 }
               }
@@ -3251,6 +3249,12 @@
                     }
                   }
                   .echartStatsContent {
+                    .echartAndLabel {
+                      margin-left: -35px;
+                    }
+                    .projectStatusNumber{
+                      margin-left: -25px
+                    }
                     .echartPieContent {
                       height: 130px!important;
                     }
@@ -3295,6 +3299,24 @@
               }
             }
           }
+        }
+      }
+    }
+    #taskCardItem {
+      .taskTitle {
+        cursor: pointer;
+        width: 80%;
+        max-width: 80%;
+        .strikethrough{
+          text-decoration: line-through;
+        }
+        .taskCardViewTitle{
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            cursor: pointer;
         }
       }
     }
@@ -3346,9 +3368,24 @@
     }
   }
 }
+@media (max-width: 599px) {
+  .projectTasksDashboard {
+    .taskViewBreadcrumb {
+      flex: 0 1 80% !important;
+    }
+    .projectTasksTabFilter{
+      flex: 0 1 20% !important;
+    }
+  }
+}
 
 @media (max-width: 399px) {
   #TasksManagementPortlet {
+    .taskDrawer {
+      .drawerTitle .taskProjectName .projectName {
+        max-width: 47% !important;
+      }
+    }
     .projectAndTasksContainer {
       .tasksToolbar  {
         .selectPrimaryFilter {
